<resources>
    <string name="app_name">BankRegistration</string>
    <string name="heading">Set up your Bank Account</string>
    <string name="pan_number">PAN NUMBER</string>
    <string name="birthdate">BIRTHDATE</string>
    <string name="next">Next</string>
    <string name="no_pan">I don\'t have a PAN</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
</resources>